--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 	border-radius: 0px;
 	box-shadow: 0px 2px black;
 	/*background-color: #D0D0D0;*/
-	background-image: url("http://blogs.arts.ac.uk/london-college-of-communication/files/2014/02/film-practice.jpg");
+	/*background-image: url("http://blogs.arts.ac.uk/london-college-of-communication/files/2014/02/film-practice.jpg");*/
+	background-image: url("http://www.multivu.com/assets/66061/photos/66061-total-prize-pool-original.jpg?1393991476");
 	background-repeat: no-repeat;
     /*background-attachment: fixed;*/
     background-position: center; 
