--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 	border-radius: 0px;
 	box-shadow: 0px 2px black;
 	/*background-color: #D0D0D0;*/
-	/*background-image: url("http://blogs.arts.ac.uk/london-college-of-communication/files/2014/02/film-practice.jpg");*/
-	background-image: url("http://www.multivu.com/assets/66061/photos/66061-total-prize-pool-original.jpg?1393991476");
-	background-repeat: no-repeat;
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 90%), url("images/Camera.jpg");
+	/*background-repeat: no-repeat;*/
     /*background-attachment: fixed;*/
     background-position: center; 
+    background-size: cover;
 	padding : 50px 0px;
 	margin-bottom: 10px;
 	color: #FFFFFF;
@@ -105,7 +105,7 @@
 }
 #suscribe a {
 	color : rgb(240,240,240);
-	font-size: 80px ;
+	margin-left: 1em;
 }
 #suscribe a:hover {
 	color : rgb(255,255,255);
@@ -114,6 +114,10 @@
 	font-size: 40px;
 }
 
-#list-symbol {
+#list-icon {
 	font-size: 2em;
+}
+
+#phone-icon {
+	font-size: 10em;
 }
