--- a/style.css
+++ b/style.css
@@ -121,3 +121,11 @@
 #phone-icon {
 	font-size: 10em;
 }
+
+#footer{
+	box-shadow: 0px -2px black;
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.5) 90%), url("images/Camera.jpg");
+    background-position: up; 
+    background-size: cover;
+    color: white;
+}
