--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@
 	font-size: 10em;
 }
 
+#add-icon {
+	font-size: 2em;
+}
+
 #footer{
 	box-shadow: 0px -2px black;
 	background-image: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.5) 90%), url("images/Camera.jpg");
