--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #header {
 	border: 0px solid #000000;
 	border-radius: 0px;
-	box-shadow: 0px 2px black;
+	box-shadow: 0px 1px rgba(150, 150, 150, 0.9);
 	/*background-color: #D0D0D0;*/
-	background-image: linear-gradient(0deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 90%), url("images/Camera.jpg");
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.6) 90%), url("images/Camera.jpg");
 	/*background-repeat: no-repeat;*/
     /*background-attachment: fixed;*/
     background-position: center; 
@@ -21,6 +21,10 @@
 #header p {
 	font-family: "Open Sans", sans-serif;
 	font-size: 3em;
+}
+
+body {
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.2) 100%);	
 }
 
 #logos{
@@ -42,7 +46,7 @@
     margin-bottom: 40px;
     width: 450px;
     height: 450px;
-    padding : 100px 100px;
+    padding : 40px 70px;
 	color:white;
 	font-family: "Montserrat", sans-serif;
 }
@@ -55,6 +59,8 @@
 
 #list {	
 	background-color: #00A0D0;
+	padding-top: 100px;+
+
 }
 #list a {
 	color : rgb(240,240,240);
@@ -106,12 +112,19 @@
 #suscribe a {
 	color : rgb(240,240,240);
 	margin-left: 1em;
+	margin-top: -1em;
 }
 #suscribe a:hover {
 	color : rgb(255,255,255);
 }
 #suscribe p {
 	font-size: 40px;
+}
+#submit a {
+	color : rgb(240,240,240);
+	margin-left: 0.7em;
+	margin-bottom: 0.5em;
+	font-size: 5em;
 }
 
 #list-icon {
