--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.2) 100%);	
+}
+
 #header {
 	border: 0px solid #000000;
 	border-radius: 0px;
@@ -23,10 +27,6 @@
 	font-size: 3em;
 }
 
-body {
-	background-image: linear-gradient(0deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.2) 100%);	
-}
-
 #logos{
 	margin-left: auto;
     margin-right: auto;
@@ -34,7 +34,6 @@ body {
 
 }
 	
-
 #overall {
 	margin: 25px 25px 25px 25px;
 }
@@ -65,6 +64,8 @@ body {
 #list a {
 	color : rgb(240,240,240);
 	font-size: 80px ;
+	margin-left: 0.3em;
+	text-shadow: #505050 1px 1px, #505050 -1px 1px, #505050 -1px -1px, #505050 1px -1px;
 }
 #list a:hover {
 	color : rgb(255,255,255);
@@ -73,6 +74,7 @@ body {
 	font-size: 2.5em;
 	margin-left: 1em;
 	margin-right: -1.5em;
+	margin-top: 1em;
 }
 
 #borrow {
@@ -81,14 +83,15 @@ body {
 #borrow a {
 	color : rgb(240,240,240);
 	font-size: 40px ;
-	margin-left: 1em;
+	margin-left: -0em;
+	text-shadow: #505050 2px 1px, #505050 -2px 1px, #505050 -2px -1px, #505050 2px -1px;
 }
 #borrow a:hover {
 	color : rgb(255,255,255);
 }
-#borrow p {
+#lama {
 	font-size: 40px;
-	margin-left: -1.6em;
+	margin-left: -0.8em;
 	margin-right: -2em;
 }
 
@@ -98,33 +101,47 @@ body {
 #add a {
 	color : rgb(240,240,240);
 	font-size: 80px ;
+	padding-top: 100px;
+	margin-left: 0.3em;
+	text-shadow: #505050 2px 1px, #505050 -2px 1px, #505050 -2px -1px, #505050 2px -1px;
 }
 #add a:hover {
 	color : rgb(255,255,255);
 }
 #add p {
 	font-size: 40px;
+	margin-top: 40px;
 }
 
 #suscribe {
 	background-color: #A59C96;
+	font-size : 12px;
 }
 #suscribe a {
 	color : rgb(240,240,240);
 	margin-left: 1em;
 	margin-top: -1em;
+	text-shadow: #505050 2px 1px, #505050 -2px 1px, #505050 -2px -1px, #505050 2px -1px;
 }
 #suscribe a:hover {
 	color : rgb(255,255,255);
 }
 #suscribe p {
-	font-size: 40px;
+	font-size: 35px;
 }
+
+#ask{
+	border : 1px solid white;
+	border-radius: 25px;
+	text-align : center;
+}
+
 #submit a {
 	color : rgb(240,240,240);
 	margin-left: 0.7em;
 	margin-bottom: 0.5em;
 	font-size: 5em;
+	text-shadow: #505050 2px 1px, #505050 -2px 1px, #505050 -2px -1px, #505050 2px -1px;
 }
 
 #list-icon {
@@ -133,10 +150,18 @@ body {
 
 #phone-icon {
 	font-size: 10em;
+	margin-top: -0.1em;
+	margin-left: 0.05em;	
 }
 
 #add-icon {
 	font-size: 2em;
+}
+
+#inform-icon {
+	font-size : 2em;
+	margin-top: -2em;
+	margin-left: -0.2em;
 }
 
 #footer{
