--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ body {
 	color : rgb(255,255,255);
 	text-shadow: #505050 0px 0px, #505050 0px 0px, #505050 0px 0px, #505050 0px 0px;
 }
+#borrow h4{
+	font-size: 40px;
+}
 #lama {
 	font-size: 40px;
 	margin-left: -0.8em;
@@ -147,6 +150,7 @@ body {
 	border : 1px solid white;
 	border-radius: 25px;
 	text-align : center;
+	margin-top: 3em;
 }
 
 #submit a {
