--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 #header h1 {
 	font-family: "Baloo Bhaina", cursive;
-	font-size: 6em;
+	font-size: 8em;
 }
 #header h3 {
 	font-family: "Baloo Bhaina", cursive;
@@ -195,8 +195,25 @@ body {
 
 #footer{
 	box-shadow: 0px -2px black;
-	background-image: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.5) 90%), url("images/Camera.jpg");
+	background-image: linear-gradient(0deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 90%), url("images/Camera.jpg");
     background-position: up; 
     background-size: cover;
     color: white;
+	font-family: "Montserrat", sans-serif;
+}
+#footer a{
+	color :white;
+	text-decoration: none
+}
+
+#lamapalooza{
+	border: 8px solid pink;
+	border-radius: 50px;
+	background-image: linear-gradient(0deg, rgba(0,0,255,0.4) 0%, rgba(255,0,0,0.4) 100%), url("http://img2.wikia.nocookie.net/__cb20120122152322/nicktoonstoonswars/images/4/43/Llama.png");
+}
+#lamapalooza h6 {
+	color : #FFBBBB;
+	font-size: 80px;
+	font-family: "Griffy", cursive;
+	text-shadow: #00FF00 1px 1px, #00FF00 -1px 1px, #00FF00 -1px -1px, #00FF00 1px -1px;
 }
